--- a/notebooks/LLM101_FINAL_2.ipynb
+++ b/notebooks/LLM101_FINAL_2.ipynb
@@ -15,7 +15,10 @@
     "\n",
     "Under et prosjekt vi gjorde da vi satt på benk i høst fikk vi hands-on erfaring med å utvikle og bruke språkmodeller (LLMer) i praksis. Vi så hvordan slike modeller kan hjelpe med å spare tid, redusere kostnader og automatisere manuelle oppgaver på en måte som enkelt kan gjenbrukes i andre prosjekter.\n",
     "\n",
-    "I dette kurset ser vi på et konkret og gjenkjennbart case: analyse av resultatene fra en medarbeiderundersøkelse. Dette er en oppgave som kan være vanskelig å strukturere og som kan være ekstremt tidkrevende å gjøre for hånd når det er store volum av tilbakemeldinger. Vi skal lære dere å koble dere til en LLM via API, bruke LangChain Expression Language (LCEL) til å bygge AI-kjeder og hente ut strukturert innsikt med Pydantic, alt i én oversiktlig notebook.\n"
+    "I dette kurset ser vi på et konkret og gjenkjennbart case: analyse av resultatene fra en medarbeiderundersøkelse. Dette er en oppgave som kan være vanskelig å strukturere og som kan være ekstremt tidkrevende å gjøre for hånd når det er store volum av tilbakemeldinger. Vi skal lære dere å koble dere til en LLM via API, bruke LangChain Expression Language (LCEL) til å bygge AI-kjeder og hente ut strukturert innsikt med Pydantic, alt i én oversiktlig notebook.\n",
+    "\n",
+    "### Obs til dere på hjemmekontor\n",
+    "Husk å koble deg til BearingPoint sin VPN for å få tilgang til språkmodellen vi bruker.\n"
    ]
   },
   {
@@ -25,7 +28,7 @@
     "# Oppgave\n",
     "Du jobber i et IT-selskap og har fått i oppgave å analysere svarene fra en intern medarbeiderundersøkelse. Undersøkelsen er anonym og du har fått tilsendt en CSV-fil med 50 tilbakemeldinger, én per ansatt. Målet er å finne ut hva folk er fornøyde eller misfornøyde med, og særlig se nærmere på temaene Nettverk, Opplæring og IT-support, som ledelsen har gitt beskjed om at har vært sentrale temaer i undersøkelser de har sendt ut tidligere. Tilbakemeldinger som ikke passer i disse kategoriene skal også få sin plass. Til slutt skal du lage en oppsummering som kan sendes til ledelsen.\n",
     "\n",
-    "For å jobbe effektivt bruker du en språkmodell til å hjelpe deg med både kategorisering og oppsummering. \n"
+    "For å jobbe effektivt bruker du en språkmodell til å hjelpe deg med både kategorisering og oppsummering.\n"
    ]
   },
   {
@@ -91,8 +94,7 @@
     "3. Sending av prompt til språkmodellen for å hente en respons\n",
     "\n",
     "\n",
-    "Som en del av tilkoblingen er det vanlig å oppgi en temperaturparameter. Denne parametreren angir nivået av presisjon du ønsker å få i responsen fra språkmodellen, og kan måles numerisk fra 0 til 1.\n",
-    "Hvis denne parameteren settes nærme 0 tillater du liten grad av variasjon og kreativitet i responsen, og du vil få tryggere og mer forutsigbare svar. Hvis den derimot settes nærme 1 tillater du større grad av kreativitet og detaljer, men vil følgelig også få en mer uforutsigbar respons. "
+    "Som en del av tilkoblingen er det vanlig å oppgi en temperaturparameter. Denne parameteren sier noe om hvor kreativ modellen kan være i responsen sin, og måles numerisk fra 0 og oppover. Hvis parameteren settes til en verdi rundt 0 tillater du liten grad av \"randomness\", og modellen vil alltid velge ordet med høyest sannsynlighet for å være riktig når den skal generere en respons. Hvis den derimot settes til en verdi nærmere 1 tillater du større grad av kreativitet og \"randomness\", og modellen kan velge ord som ikke alltid har høyest sannsynlighet for å være riktig i teksten den svarer med. "
    ]
   },
   {
@@ -116,12 +118,6 @@
     "    azure_deployment=os.getenv(\"AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI\"),\n",
     "    model=os.getenv(\"OPENAI_MODEL_GPT_4O-MINI\", default=\"gpt-4o-mini\"),\n",
     "    temperature=0,\n",
-    ")\n",
-    "\n",
-    "reasoning_llm = AzureChatOpenAI(\n",
-    "    azure_deployment=os.getenv(\"AZURE_OPENAI_DEPLOYMENT_O4_MINI\"),\n",
-    "    model=os.getenv(\"OPENAI_MODEL_O4-MINI\", default=\"o4-mini\"),\n",
-    "    reasoning_effort=\"medium\",\n",
     ")"
    ]
   },
@@ -192,15 +188,15 @@
    "source": [
     "## Hvordan lage en enkel AI-kjede med LangChain Expression Language (LCEL)\n",
     " \n",
-    "LCEL er en metode/språk? for å bygge og kjøre såkalte *kjeder* i LangChain på. Kjeder, eller chains, brukes for å koble sammen ulike AI-komponenter. F.eks. kan språkmodeller, datakilder og logikk kobles sammen til én sammenhengende prosess, dvs. en kjede. LCEL gir et standardisert språk for å definere disse kjedene, og er brukervennlig fordi man slipper å lage alt manuelt med kode. Med andre ord får du en \"oppskrift\" på hvordan AI-komponentene dine skal jobbe sammen.\n",
+    "LCEL er en metode for å bygge og kjøre såkalte *kjeder* i LangChain på. Kjeder, eller chains, brukes for å koble sammen ulike AI-komponenter. F.eks. kan språkmodeller, datakilder og logikk kobles sammen til én sammenhengende prosess, dvs. en kjede. LCEL gir et standardisert språk for å definere disse kjedene, og er brukervennlig fordi man slipper å lage alt manuelt med kode. Med andre ord får du en \"oppskrift\" på hvordan AI-komponentene dine skal jobbe sammen.\n",
     " \n",
     "**Fordelene med LCEL**\n",
     "1. Støtter parallell og asynkron kjøring - Ulike deler av kjeden kan kjøre samtidig, og systemet kan behandle flere forespørsler på en gang. Dermed kan oppgaver behandles raskere.\n",
     "2. Strømming av resultater - Man kan begynne å se svar mens AI-en fremdeles jobber. (Passer spesielt godt for chatbaserte løsninger)\n",
     "3. Enkel feilsøking - Når kjedene blir komplekse er det viktig å kunne se hva som har blitt gjort underveis. LCEL logger automatisk alt til LangSmith, som gjør det enklere å feilsøke.\n",
-    "4. Standardisert - Alle kjeder i LCEL bruker samme grensesnitt, som gjør dem enkle å kombinere og gjenbruke på tvers av prosjekter.\n",
+    "4. Standardisert - Alle kjeder i LCEL bruker samme grensesnitt, som gjør dem enkle å kombinere og gjenbruke på tvers av prosjekter. Standardiseringen gjør at du enkelt kan bruke ulike leverandører av språkmodeller uten å måtte tilpasse koden for hvert enkelt API. \n",
     " \n",
-    "LCEL bruker en pipe-operator (|) til å koble sammen ulike trinn i kjeden. Den tar ut data fra én komponent og sender den direkte som input til neste komponent. LCEL bruker også PromptTemplate, som kan tenkes på som en mal for teksten du sender til språkmodellen. PromptTemplate gjør det enkelt å lage dynamiske meldinger ved at man kan sette inn variabler i teksten. Fordelen med dette er at man kan lage én mal, og bruke den med ulike data. Det hjelper deg også med å skille selve teksten fra logikken, og kan gjøre prosessen sikrere ved at man unngår feil som kan oppstå ved manuell string-manipulasjon. Vi skal nå se på noen eksempler med LCEL som bruker pipe-operator og PromptTemplate.\n",
+    "LCEL bruker en pipe-operator `|` til å koble sammen ulike trinn i kjeden. Den tar ut data fra én komponent og sender den direkte som input til neste komponent. LCEL bruker også `PromptTemplate`, som kan tenkes på som en mal for teksten du sender til språkmodellen. `PromptTemplate` gjør det enkelt å lage dynamiske meldinger ved at man kan sette inn variabler i teksten. Fordelen med dette er at man kan lage én mal, og bruke den med ulike data. Det hjelper deg også med å skille selve teksten fra logikken, og kan gjøre prosessen sikrere ved at man unngår feil som kan oppstå ved manuell string-manipulasjon. Vi skal nå se på noen eksempler med LCEL som bruker pipe-operator og PromptTemplate.\n",
     " \n",
     "##### Kilder\n",
     "[LangChain](https://python.langchain.com/docs/concepts/lcel/)\n",
@@ -660,6 +656,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the reasoning model\n",
+    "reasoning_llm = AzureChatOpenAI(\n",
+    "    azure_deployment=os.getenv(\"AZURE_OPENAI_DEPLOYMENT_O4_MINI\"),\n",
+    "    model=os.getenv(\"OPENAI_MODEL_O4-MINI\", default=\"o4-mini\"),\n",
+    "    reasoning_effort=\"medium\",\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -680,11 +690,11 @@
     "\n",
     "reasoning_chain = prompt | reasoning_llm | StrOutputParser()\n",
     "\n",
-    "print(reasoning_chain.invoke({}))\n",
+    "print(\"Svar fra resonneringsmodellen:\", reasoning_chain.invoke({}))\n",
     "\n",
     "none_reasoning_chain = prompt | llm | StrOutputParser()\n",
     "\n",
-    "print(none_reasoning_chain.invoke({}))"
+    "print(\"Svar fra modellen uten resonnering:\", none_reasoning_chain.invoke({}))"
    ]
   },
   {
@@ -1067,7 +1077,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1081,7 +1091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
