Add Google Colab support: include package installation and local execution handling in LLM101 notebook

--- a/notebooks/LLM101_FINAL_2.ipynb
+++ b/notebooks/LLM101_FINAL_2.ipynb
@@ -32,6 +32,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Installer nødvendige pakker i kurset (kun for Google Colab brukere)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def is_colab():\n",
+    "    try:\n",
+    "        import google.colab\n",
+    "        return True\n",
+    "    except ImportError:\n",
+    "        return False\n",
+    "\n",
+    "if is_colab():\n",
+    "    !pip install be-llm101\n",
+    "    print(\"Installed the necessary packages for the course\")\n",
+    "else:\n",
+    "    sys.path.append(\"../src\")\n",
+    "    print(\"This notebook is running locally\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from be_llm101 import hello_llm101\n",
+    "hello_llm101()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Datasett"
    ]
   },
