Enhance LLM101 notebook for Colab compatibility: add error handling for package import, update data path retrieval, and ensure local execution setup. Update package metadata handling in be_llm101 module for improved robustness.

--- a/notebooks/LLM101_FINAL_2.ipynb
+++ b/notebooks/LLM101_FINAL_2.ipynb
@@ -52,20 +52,18 @@
     "\n",
     "if is_colab():\n",
     "    !pip install be-llm101\n",
+    "    try:\n",
+    "        from be_llm101 import hello_llm101\n",
+    "        hello_llm101()\n",
+    "    except ImportError:\n",
+    "        print(\"Failed to import be-llm101\")\n",
     "    print(\"Installed the necessary packages for the course\")\n",
     "else:\n",
+    "    %load_ext autoreload\n",
+    "    %autoreload 2\n",
     "    sys.path.append(\"../src\")\n",
+    "\n",
     "    print(\"This notebook is running locally\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from be_llm101 import hello_llm101\n",
-    "hello_llm101()"
    ]
   },
   {
@@ -91,9 +89,10 @@
     "# Import the raw data containing the feedback. There is one row per employee.\n",
     "\n",
     "import pandas as pd\n",
+    "import be_llm101\n",
     "pd.set_option('display.max_colwidth', None) # Ensure no truncated output of dataframe\n",
     "\n",
-    "path_to_survey = \"../files/IT_survey.csv\"\n",
+    "path_to_survey = be_llm101.get_data_path()\n",
     "df = pd.read_csv(\n",
     "    path_to_survey,\n",
     "    usecols = [\"ID\", \"Feedback\"],       # Extract relevant columns\n",
