Refactor LLM101 notebook: update package installation instructions for clarity, add environment variable setup for Azure OpenAI, and streamline model initialization for improved readability and functionality.

--- a/notebooks/LLM101_FINAL_2.ipynb
+++ b/notebooks/LLM101_FINAL_2.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Installer nødvendige pakker i kurset (kun for Google Colab brukere)"
+    "## Installer nødvendige pakker for kurset"
    ]
   },
   {
@@ -53,17 +53,46 @@
     "if is_colab():\n",
     "    !pip install be-llm101\n",
     "    try:\n",
-    "        from be_llm101 import hello_llm101\n",
-    "        hello_llm101()\n",
+    "        import be_llm101\n",
+    "        print(f\"Installed version {be_llm101.__version__} of the course package\")\n",
     "    except ImportError:\n",
     "        print(\"Failed to import be-llm101\")\n",
-    "    print(\"Installed the necessary packages for the course\")\n",
     "else:\n",
     "    %load_ext autoreload\n",
     "    %autoreload 2\n",
     "    sys.path.append(\"../src\")\n",
     "\n",
     "    print(\"This notebook is running locally\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sett miljøvariabler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "AZURE_OPENAI_ENDPOINT = \"https://be-no-genai-internal-project-openai.openai.azure.com\"\n",
+    "OPENAI_API_VERSION=\"2025-02-01-preview\"\n",
+    "AZURE_OPENAI_DEPLOYMENT_O4_MINI = \"o4-mini\" # Reasoning LLM\n",
+    "OPENAI_MODEL_O4_MINI = \"o4-mini-2025-04-06\" # Model version of reasoning LLM\n",
+    "\n",
+    "AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI = \"gpt-4o-mini\" # Non-reasoning LLM\n",
+    "OPENAI_MODEL_GPT_4O_MINI = \"gpt-4o-mini-2024-07-18\" # Model version of non-reasoning LLM\n",
+    "\n",
+    "if is_colab():\n",
+    "    from getpass import getpass\n",
+    "    AZURE_OPENAI_API_KEY = getpass(\"AZURE_OPENAI_API_KEY: \")\n",
+    "else:\n",
+    "    AZURE_OPENAI_API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
+    "    "
    ]
   },
   {
@@ -152,14 +181,14 @@
     "\n",
     "\n",
     "llm = AzureChatOpenAI(\n",
-    "    azure_deployment=os.getenv(\"AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI\"),\n",
-    "    model=os.getenv(\"OPENAI_MODEL_GPT_4O-MINI\", default=\"gpt-4o-mini\"),\n",
+    "    azure_deployment=AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI,\n",
+    "    model=OPENAI_MODEL_GPT_4O_MINI,\n",
     "    temperature=0,\n",
     ")\n",
     "\n",
     "reasoning_llm = AzureChatOpenAI(\n",
-    "    azure_deployment=os.getenv(\"AZURE_OPENAI_DEPLOYMENT_O4_MINI\"),\n",
-    "    model=os.getenv(\"OPENAI_MODEL_O4-MINI\", default=\"o4-mini\"),\n",
+    "    azure_deployment=AZURE_OPENAI_DEPLOYMENT_O4_MINI,\n",
+    "    model=OPENAI_MODEL_O4_MINI,\n",
     "    reasoning_effort=\"medium\",\n",
     ")"
    ]
