Update README and LLM101 notebook: Change Colab link to point to the latest version, add package installation instructions, and set environment variables for Azure OpenAI integration.

--- a/notebooks/LLM101_FINAL_2_EF_30mai.ipynb
+++ b/notebooks/LLM101_FINAL_2_EF_30mai.ipynb
@@ -35,6 +35,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Installer nødvendige pakker for kurset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def is_colab():\n",
+    "    try:\n",
+    "        import google.colab\n",
+    "        return True\n",
+    "    except ImportError:\n",
+    "        return False\n",
+    "\n",
+    "if is_colab():\n",
+    "    !pip install be-llm101\n",
+    "    try:\n",
+    "        import be_llm101\n",
+    "        print(f\"Installed version {be_llm101.__version__} of the course package\")\n",
+    "    except ImportError:\n",
+    "        print(\"Failed to import be-llm101\")\n",
+    "else:\n",
+    "    %load_ext autoreload\n",
+    "    %autoreload 2\n",
+    "    sys.path.append(\"../src\")\n",
+    "\n",
+    "    print(\"This notebook is running locally\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sett miljøvariabler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "AZURE_OPENAI_ENDPOINT = \"https://be-no-genai-internal-project-openai.openai.azure.com\"\n",
+    "OPENAI_API_VERSION=\"2025-02-01-preview\"\n",
+    "AZURE_OPENAI_DEPLOYMENT_O4_MINI = \"o4-mini\" # Reasoning LLM\n",
+    "OPENAI_MODEL_O4_MINI = \"o4-mini-2025-04-06\" # Model version of reasoning LLM\n",
+    "\n",
+    "AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI = \"gpt-4o-mini\" # Non-reasoning LLM\n",
+    "OPENAI_MODEL_GPT_4O_MINI = \"gpt-4o-mini-2024-07-18\" # Model version of non-reasoning LLM\n",
+    "\n",
+    "if is_colab():\n",
+    "    from getpass import getpass\n",
+    "    AZURE_OPENAI_API_KEY = getpass(\"AZURE_OPENAI_API_KEY: \")\n",
+    "else:\n",
+    "    AZURE_OPENAI_API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Datasett"
    ]
   },
@@ -54,9 +122,10 @@
     "# Import the raw data containing the feedback. There is one row per employee.\n",
     "\n",
     "import pandas as pd\n",
+    "import be_llm101\n",
     "pd.set_option('display.max_colwidth', None) # Ensure no truncated output of dataframe\n",
     "\n",
-    "path_to_survey = \"../files/IT_survey.csv\"\n",
+    "path_to_survey = be_llm101.get_data_path()\n",
     "df = pd.read_csv(\n",
     "    path_to_survey,\n",
     "    usecols = [\"ID\", \"Feedback\"],       # Extract relevant columns\n",
@@ -194,7 +263,7 @@
     "1. Støtter parallell og asynkron kjøring - Ulike deler av kjeden kan kjøre samtidig, og systemet kan behandle flere forespørsler på en gang. Dermed kan oppgaver behandles raskere.\n",
     "2. Strømming av resultater - Man kan begynne å se svar mens AI-en fremdeles jobber. (Passer spesielt godt for chatbaserte løsninger)\n",
     "3. Enkel feilsøking - Når kjedene blir komplekse er det viktig å kunne se hva som har blitt gjort underveis. LCEL logger automatisk alt til LangSmith, som gjør det enklere å feilsøke.\n",
-    "4. Standardisert - Alle kjeder i LCEL bruker samme grensesnitt, som gjør dem enkle å kombinere og gjenbruke på tvers av prosjekter. Standardiseringen gjør at du enkelt kan bruke ulike leverandører av språkmodeller uten å måtte tilpasse koden for hvert enkelt API. \n",
+    "4. Standardisert - Alle kjeder i LCEL bruker samme grensesnitt, som gjør dem enkle å kombinere og gjenbruke på tvers av prosjekter. Standardiseringen gjør at du enkelt kan bruke ulike leverandører av språkmodeller (og andre elementer som vektordatabaser, dokument-parsere osv.) uten å måtte tilpasse koden for hvert enkelt API. \n",
     " \n",
     "LCEL bruker en pipe-operator `|` til å koble sammen ulike trinn i kjeden. Den tar ut data fra én komponent og sender den direkte som input til neste komponent. LCEL bruker også `PromptTemplate`, som kan tenkes på som en mal for teksten du sender til språkmodellen. `PromptTemplate` gjør det enkelt å lage dynamiske meldinger ved at man kan sette inn variabler i teksten. Fordelen med dette er at man kan lage én mal, og bruke den med ulike data. Det hjelper deg også med å skille selve teksten fra logikken, og kan gjøre prosessen sikrere ved at man unngår feil som kan oppstå ved manuell string-manipulasjon. Vi skal nå se på noen eksempler med LCEL som bruker pipe-operator og PromptTemplate.\n",
     " \n",
