--- a/notebooks/LLM101_FINAL_2_EF_30mai.ipynb
+++ b/notebooks/LLM101_FINAL_2_EF_30mai.ipynb
@@ -184,8 +184,11 @@
     "\n",
     "\n",
     "llm = AzureChatOpenAI(\n",
-    "    azure_deployment=os.getenv(\"AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI\"),\n",
-    "    model=os.getenv(\"OPENAI_MODEL_GPT_4O-MINI\", default=\"gpt-4o-mini\"),\n",
+    "    azure_endpoint=AZURE_OPENAI_ENDPOINT,\n",
+    "    azure_deployment=AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI,\n",
+    "    model=OPENAI_MODEL_GPT_4O_MINI,\n",
+    "    api_key=AZURE_OPENAI_API_KEY,\n",
+    "    api_version=OPENAI_API_VERSION,\n",
     "    temperature=0,\n",
     ")"
    ]
@@ -732,8 +735,11 @@
    "source": [
     "# Initialize the reasoning model\n",
     "reasoning_llm = AzureChatOpenAI(\n",
-    "    azure_deployment=os.getenv(\"AZURE_OPENAI_DEPLOYMENT_O4_MINI\"),\n",
-    "    model=os.getenv(\"OPENAI_MODEL_O4-MINI\", default=\"o4-mini\"),\n",
+    "    azure_endpoint=AZURE_OPENAI_ENDPOINT,\n",
+    "    azure_deployment=AZURE_OPENAI_DEPLOYMENT_O4_MINI,\n",
+    "    model=OPENAI_MODEL_O4_MINI,\n",
+    "    api_key=AZURE_OPENAI_API_KEY,\n",
+    "    api_version=OPENAI_API_VERSION,\n",
     "    reasoning_effort=\"medium\",\n",
     ")"
    ]
@@ -1146,7 +1152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1160,7 +1166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
