ferdig versjon av notebook for kurset

--- a/notebooks/LLM101_FINAL_2.ipynb
+++ b/notebooks/LLM101_FINAL_2.ipynb
@@ -519,7 +519,7 @@
    "metadata": {},
    "source": [
     "## Bruke modellen sammen med LLM\n",
-    "Vi bruker en wrapperen ```with_structured_output(...)``` for å fortelle LLMen at den må svare med output matcher Pydantic-modellen.\n",
+    "Vi bruker en wrapperen ```with_structured_output(...)``` for å fortelle LLMen at den må svare med output som matcher Pydantic-modellen.\n",
     "### Eksempel"
    ]
   },
