prøver å kollapse celler

--- a/notebooks/LLM101.ipynb
+++ b/notebooks/LLM101.ipynb
@@ -1000,6 +1000,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "cellView": "collapsed",
    "outputs": [],
    "source": [
     "\n",
@@ -1097,6 +1098,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "cellView": "collapsed",
    "outputs": [],
    "source": [
     "# 1. Prompt Template\n",
