prøver å kollapse celler

--- a/notebooks/LLM101.ipynb
+++ b/notebooks/LLM101.ipynb
@@ -999,8 +999,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "cellView": "collapsed",
+   "metadata": {"colab":{
+    "collapsed": true
+   }},
    "outputs": [],
    "source": [
     "\n",
@@ -1097,8 +1098,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "cellView": "collapsed",
+   "metadata": {
+    "colab":{
+    "collapsed": true
+   }
+},
    "outputs": [],
    "source": [
     "# 1. Prompt Template\n",
